Add comprehensive security test suite with 258 tests (100% pass rate)
Security Improvements:
- Added modular test structure: tests/security/attacks/*.mjs (JS, TS, Python, PHP, Java)
- Each test includes educational explanations of attack vectors
- Added missing security patterns to server.mjs:
  - JS/TS: Object.prototype access, setInterval (DoS prevention)
  - Python: urllib, ftplib, smtplib, fileinput, getpass modules
  - PHP: expect_popen, show_source, highlight_file, ftp_*, apache_*, encoding bypasses
  - Java: Runtime.halt/load/loadLibrary, XStream, SnakeYAML deserialization

Test Infrastructure:
- Docker-based test runner (docker-compose.test.yml)
- HTML and JSON report generation
- Categorized tests by attack type (command_execution, file_operations, etc.)

All 258 security tests passing - blocks dangerous code while allowing safe operations.